kubernetes/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: easyshop
  labels:
    name: easyshop
    environment: production
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
